--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "bulletproof-next-app",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next -p 3009",
+    "dev": "next -p 3000",
     "build": "next build",
-    "start": "next start -p 3009",
+    "start": "next start -p 3000",
     "lint": "standard"
   },
   "repository": {
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/arunoda/bulletproof-next-app#readme",
   "dependencies": {
     "@arunoda/git-cms": "^0.1.0",
+    "axios": "^0.21.1",
     "markdown-to-jsx": "^6.11.4",
     "ms": "^2.1.2",
     "next": "9.5.2",
+    "next-auth": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
